
	* adonis: permutation tests fixed. The permutation statistics were
	wrongly calculated. The results will now be different than in
	older version, including the example(adonis). Basically, the
	reported statitistic used SS improvement compared to the residual
	of the complete model, but permutations used SS accumulation
	compared to the residual after the current model.
	
Version 1.12-10 (closed April 19, 2008)

	* adonis: the fix for the unused factor levels (r312) revealed
	that adonis did not handle properly aliased variables and
	pivoting. Results need checking.

	* designdist: gained argument 'abcd = FALSE' to use the 2x2
	contingency table notation instead of the more tangible default
	notation. 
	
Version 1.12-9 (closed April 13, 2008)

	* ordiArrowMul: added function 'ordiArrowMul' to improve automatic
	scaling of biplot arrows (in plot.cca, text.cca, points.cca) and
	fitted vectors (in plot.envfit). Reversed axes 'xlim=c(1,-1)' work
	now, and shifted origin 'at = c(1,1)' taken into account in
	plot.envfit. 

	* plot.cca: scaling used for biplot arrows is returned as an
	attribute to the 'biplot' item in the 'ordiplot' object (but this
	attribute is not used for anything useful yet).

	* summary.cca: contributions of eigenvalues accumulated for
	constrained and unconstrained axes, and separately (new) for
	constrained axes. 

	* allPerms: Now accepts a vector from which number of observations 
	can be deduced. This was the intended behaviour but allPerms failed
	in such cases.

	* adonis: Was not dropping empty levels of factors, which was
	leading to incorrect results (d.f. was inflated).  Reported by
	Tyler Smith.
	
Version 1.12-8 (closed April 6, 2008)

	* permute: New high-level untility function for facilitating
	the production of permutation tests using the new permutation
	designs allowed by permuted.index2(). An example of the new
	API is shown in ?permute.

	* permutest.betadisper: Pairwise t test function made more
	computationally stable.
	